# Beer-Rating

./: .gitignore  CMakeLists.txt  README.md
beer-rating/: CMakeLists.txt  main.cpp
beer_lib/: CMakeLists.txt
beer_lib/include/: Beer_rating.hpp  beerrating.hpp  reviewer.hpp
beer_lib/src/: beerrating.cpp  reviewer.cpp
doc/: Notes.txt  Requirements.md  Todo.md
tests/: CMakeLists.txt  beerrating.cpp  beerrating_test.cpp
